CMAKE_MINIMUM_REQUIRED(VERSION 3.6)

PROJECT(zeromq_examples)
SET(ZEROMQ_EXAMPLES_VERSION_MAJOR 0)
SET(ZEROMQ_EXAMPLES_VERSION_MINOR 1)
SET(ZEROMQ_EXAMPLES_VERSION_PATCH 0)

SET(CMAKE_CXX_FLAGS_COMMON
    "-std=c++11 \
    -stdlib=libc++ \
    -Wall \
    -Wextra \
    -Werror")
SET(CMAKE_CXX_FLAGS_DEBUG
    "${CMAKE_CXX_FLAGS_DEBUG} \
    ${CMAKE_CXX_FLAGS_COMMON}")
SET(CMAKE_CXX_FLAGS_RELEASE
    "${CMAKE_CXX_FLAGS_RELEASE} \
    ${CMAKE_CXX_FLAGS_COMMON}
    -O3")

ADD_SUBDIRECTORY(vendor/zeromq)
ADD_SUBDIRECTORY(vendor/zeromqcpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${ZEROMQCPP_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIRS})

LINK_DIRECTORIES(${ZEROMQ_LINK_DIRS})

ADD_SUBDIRECTORY(examples)
